--- a/style.css
+++ b/style.css
@@ -20,9 +20,13 @@ header {
     display: flex;
     flex-flow: row;
     justify-content: space-between;
-    height: 200px
+    height: 20vh
 }
 
+.logo {
+    padding: 10px;
+    line-height: 100px;
+}
 .logo img {
     display: block;
     height: 200px;
@@ -57,7 +61,7 @@ nav a {
     height: 400px;
 } */
 
-.bx-wrapper {
+/* .bx-wrapper {
     width: 1200px;
     margin: auto;
     -webkit-box-shadow: none !important;
@@ -67,5 +71,51 @@ nav a {
 
 .slider img {
     width: 100%;
+} */
+
+
+
+.wraper-swiper  {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+}
+
+.swiper-container, .swiper-container-video {
+    height: 700px;    
+}
+
+.swiper-container img {
+    width: 100%;
+}
+.swiper-button-next {
+    margin: 10px;
+}
+
+
+.swiper-container-video iframe{
+    width: 100%;
+    height: 700px;
 }
 /* SLIDER */
+
+
+
+/* SCHEDULE */
+.schedule {
+    display: flex;
+    justify-content: center;
+}
+
+.schedule img {
+    display: block;
+    width: 100%;;
+}
+
+footer {
+    margin: 50px 0;
+    text-align: center;
+    font-family: 'Queen_Destroy';
+}
+/* SCHEDULE */
